--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,197 @@
-.App {
+div:first-of-type, #heading h1:first-of-type{
+ margin-top:0;
+}
+
+#heading {
+  background-color: #038ca9;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* div.item:hover .bt-close{
+  visibility: visible;
+} */
+
+
+div.non-touch .bt-close{
+  visibility: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+div.non-touch:hover .bt-close{
+  visibility: visible;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+input:checked + p {
+  text-decoration: line-through;
+  text-decoration-color: #038ca9;
+}
+
+
+form.item {
+  text-align: center;
+  margin-left: 20px;
+}
+
+button.add {
+  min-height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border-color: transparent;
+  background-color: #038ca9;
+  color: #fff;
+  font-size: 30px;
+  border-width: 0;
+  cursor: pointer;
+  outline: none;
+}
+
+button.add.small{
+  min-height: 25px;
+  width: 25px;
+  font-size:15px;
+  background-color: #E4E9FD;
+}
+/* f class selectors */
+
+.box {
+  max-width: 400px;
+  margin: 50px auto;
+  background: white;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+}
+
+.side-box{
+  width: 250px;
+  margin: 50px auto 10px 10px;
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  padding: 10px;
+}
+
+.side-box p{
+  padding:5px;
+}
+
+.item {
+  min-height: 70px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border-bottom: 1px solid #F1F1F1;
+}
+
+.listInput{
+  outline: 0;
+  border: none;
+  padding: 5px;
+  font-size: 20px;
+  text-align:center;
+  max-width:200px;
+}
+
+form.list{
+  max-width: 250px;
+  overflow: hidden;
+  text-align: center;
+}
+
+
+.contentForm{
+  display: contents;
+}
+
+.bt-close{
+  /* visibility: hidden; */
+  height: 25px;
+  cursor: pointer;
+}
+
+.bt-close-container{
+  margin-left: auto;
+  margin-right: 10px;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  height: 25px;
+  outline: none;
+}
+
+.item:last-child {
+  border-bottom: 0;
+}
+
+.item-p {
+  padding: 20px;
+}
+
+/* /f classes end here */
+
+input[type="checkbox"] {
+  margin: 20px;
+  transform: scale(1.75);
+  cursor: pointer;
+}
+
+input[type="text"].itemsInput {
+  text-align: center;
+  height: 60px;
+  top: 10px;
+  border: none;
+  background: transparent;
+  font-size: 20px;
+  font-weight: 200;
+  width: 313px;
+}
+
+input[type="text"]:focus {
+  outline: none;
+  box-shadow: inset 0 -3px 0 0 #038ca9;
+}
+
+/* f element selectors */
+
+footer {
   color: white;
+  color: rgba(0, 0, 0, 0.5);
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  color: #fff;
+  padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p{
+  margin: 0;
+  font-size: 20px;
+  font-weight: 200;
+  color: #00204a;
 }
+
+body {
+  background-color: #E4E9FD;
+  background-image: -webkit-linear-gradient(65deg, #038ca9 50%, #E4E9FD 50%);
+  min-height: 100vh;
+  margin: 0;
+  font-family: sans-serif;
+  padding-top: 29px;
+}
+/* /f */
+
+::placeholder {
+  color: grey;
+  opacity: 1;
+}
+
+*{
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: ) {
+  
+}
+
+
+
+
+/* a683e3 */
